--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,8 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
 
+[Makefile]
+indent_style = tab
+
 [*.go]
 indent_style = tab
