--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,9 @@ trim_trailing_whitespace = true
 indent_style = space
 indent_size = 4
 
+[version]
+insert_final_newline = false
+
 [Makefile]
 indent_style = tab
 
