--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,19 @@
 name: test
 on: push
 jobs:
-    linux:
-        name: linux test
-        runs-on: ubuntu-latest
+    test:
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [ubuntu-latest, windows-latest]
+                go-version: [1.16]
+        name: ${{ matrix.os }} test
         steps:
             - uses: actions/checkout@v2
             - name: test
               uses: actions/setup-go@v2
               with:
-                  go-version: 1.16
+                  go-version: ${{ matrix.go-version }}
             - name: get deps
               run: go get -v -t -d ./...
             - name: run test
