--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,7 @@
 name: test
-on: push
+on:
+    pull_request:
+        types: [opened, synchronize]
 jobs:
     test:
         runs-on: ${{ matrix.os }}
